--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/cvec"]
 	path = lib/cvec
 	url = https://github.com/alexishachemi/cvec.git
+[submodule "lib/cjson/cJSON"]
+	path = lib/cjson/cJSON
+	url = https://github.com/DaveGamble/cJSON.git
